[gd_scene load_steps=68 format=3 uid="uid://dg7sn7yc8soxw"]

[ext_resource type="Script" uid="uid://btau76gnr6hu0" path="res://GameManager.gd" id="1_3tbxw"]
[ext_resource type="Texture2D" uid="uid://d0xs5laex14yb" path="res://Sprites/backgroundforgame.jpg" id="1_8qpgq"]
[ext_resource type="Script" uid="uid://dgn7mxq5jnyjx" path="res://PlayerActions.gd" id="2_pv6b4"]
[ext_resource type="Texture2D" uid="uid://d2qfpp8m01qpj" path="res://Sprites/backgroundforgame3.png" id="2_tdq2s"]
[ext_resource type="Texture2D" uid="uid://c7ddomoydwsxw" path="res://Sprites/timer.png" id="3_aeu83"]
[ext_resource type="Script" uid="uid://dngbft20e4txe" path="res://Customer.gd" id="3_x5ji8"]
[ext_resource type="Texture2D" uid="uid://bxnqn7etwek2m" path="res://Sprites/coins.png" id="4_f21le"]
[ext_resource type="Texture2D" uid="uid://d3vy505a5v48n" path="res://Sprites/customer.png" id="4_v3hs3"]
[ext_resource type="Script" uid="uid://bx1senfqwd70f" path="res://Stove.gd" id="5_pv6b4"]
[ext_resource type="Script" uid="uid://dq36xhp2lhfit" path="res://DrinkMachine.gd" id="6_8dnxm"]
[ext_resource type="Script" uid="uid://kka6kd2s7087" path="res://ToppingStation.gd" id="7_v3hs3"]
[ext_resource type="Texture2D" uid="uid://buw2qkle3pm5e" path="res://Player/down/front.png" id="8_uc6q1"]
[ext_resource type="Texture2D" uid="uid://cf750yeheq451" path="res://Hotbar/EmptyHotBar.png" id="9_o8l48"]
[ext_resource type="Texture2D" uid="uid://b0wb676v5mc75" path="res://Player/down/front.walk.png" id="9_vygm6"]
[ext_resource type="Texture2D" uid="uid://ccw2e06klhb1y" path="res://Player/left/left.png" id="10_2e153"]
[ext_resource type="Texture2D" uid="uid://ecd5xo7vfrcu" path="res://Sprites/choose-your-brew.png" id="10_led80"]
[ext_resource type="Texture2D" uid="uid://cvkfpc4qq8ipr" path="res://Player/left/left.walk1.png" id="11_cdkxt"]
[ext_resource type="Texture2D" uid="uid://gqot7e2vvi52" path="res://Sprites/coffee (1).png" id="11_mi4js"]
[ext_resource type="Texture2D" uid="uid://bne16xqt7h4qy" path="res://Player/left/left.walk2.png" id="12_k1sw4"]
[ext_resource type="Texture2D" uid="uid://cjobhmg7awg3i" path="res://Sprites/tea (1).png" id="12_o3vwv"]
[ext_resource type="Texture2D" uid="uid://6j0pjwndgq4w" path="res://Player/right/right.png" id="13_6rkns"]
[ext_resource type="Texture2D" uid="uid://ccdemhs0cf04m" path="res://Sprites/new_pan.png" id="13_m6fch"]
[ext_resource type="Texture2D" uid="uid://dvbsla8tabhq8" path="res://Sprites/yum-which-sweet-topping-do-you-want.png" id="13_mi4js"]
[ext_resource type="Texture2D" uid="uid://ckf16rj68xjir" path="res://Sprites/strawberry.png" id="14_401ut"]
[ext_resource type="Texture2D" uid="uid://crrmihwon3lf1" path="res://Player/right/right.walk1.png" id="14_jbja5"]
[ext_resource type="Texture2D" uid="uid://me08lb1orcqu" path="res://Player/right/right.walk2.png" id="15_xvovi"]
[ext_resource type="Texture2D" uid="uid://cij3xnclqxed6" path="res://Sprites/blueberry.png" id="15_yphxy"]
[ext_resource type="Texture2D" uid="uid://cx5b0ygknb42" path="res://Player/up/back.png" id="16_vjpaa"]
[ext_resource type="Texture2D" uid="uid://b7tm5rjlhdcx7" path="res://Player/up/back.walk.png" id="17_jyxgm"]
[ext_resource type="Texture2D" uid="uid://vxekar2ky22" path="res://Sprites/quit (2).png" id="17_yphxy"]
[ext_resource type="Texture2D" uid="uid://cjnkk6kgedrgy" path="res://Player/cat2/b.front.png" id="18_e8wx8"]
[ext_resource type="AudioStream" uid="uid://dq7es5uy4n7w3" path="res://music/menu-button-88360.mp3" id="18_ma1re"]
[ext_resource type="AudioStream" uid="uid://dwfo3yf1vddxf" path="res://music/click-button.mp3" id="19_28psf"]
[ext_resource type="Texture2D" uid="uid://c3isdeaopulgr" path="res://Player/cat2/b.front.walk.png" id="19_tdq2s"]
[ext_resource type="AudioStream" uid="uid://c1suv2bvoisft" path="res://music/interactive-sounds.mp3" id="20_a6adi"]
[ext_resource type="Texture2D" uid="uid://cwqviicqmtsxm" path="res://Player/cat2/b.left.png" id="20_dygjy"]
[ext_resource type="Texture2D" uid="uid://bqcxbkx4six6f" path="res://Player/cat2/b.left.walk1.png" id="21_edvcq"]
[ext_resource type="AudioStream" uid="uid://bvh45plv00il7" path="res://music/Ding.mp3" id="21_va67g"]
[ext_resource type="AudioStream" uid="uid://1v335rce7ujw" path="res://music/10s-countdown.mp3" id="22_t0yo1"]
[ext_resource type="Texture2D" uid="uid://dyexnlsu68gno" path="res://Player/cat2/b.left.walk2.png" id="22_xyeuq"]
[ext_resource type="AudioStream" uid="uid://desf20h880qk" path="res://music/Bell.mp3" id="23_6brkw"]
[ext_resource type="Texture2D" uid="uid://by610guqeqs6v" path="res://Player/cat2/b.right.png" id="23_t4s8j"]
[ext_resource type="AudioStream" uid="uid://jspte0cof8j5" path="res://music/Fire.mp3" id="24_cgwad"]
[ext_resource type="Texture2D" uid="uid://n81ve5e2rbhi" path="res://Player/cat2/b.right.walk1.png" id="24_iluto"]
[ext_resource type="AudioStream" uid="uid://de5mhj3qcyb56" path="res://music/drink-pouring.mp3" id="25_0igvr"]
[ext_resource type="Texture2D" uid="uid://b44jwn8e0w7h0" path="res://Player/cat2/b.right.walk2.png" id="25_av1bx"]
[ext_resource type="Texture2D" uid="uid://dy82kypady6n0" path="res://Player/cat2/b.back.png" id="26_dygid"]
[ext_resource type="Texture2D" uid="uid://dynov2107rb7s" path="res://Player/cat2/b.back.walk.png" id="27_8d602"]
[ext_resource type="Texture2D" uid="uid://taruff642amu" path="res://Player/cat3/a.front.png" id="28_06tja"]
[ext_resource type="Script" uid="uid://dtnapf3q64px1" path="res://addons/virtual_joystick/virtual_joystick_instantiator.gd" id="29_05o7g"]
[ext_resource type="Texture2D" uid="uid://dr0a2oitt6eo8" path="res://Player/cat3/a.front.walk (1).png" id="29_ecpwa"]
[ext_resource type="Texture2D" uid="uid://bqbtjdlvv4ltw" path="res://Player/cat3/a.left.png" id="30_g4i0f"]
[ext_resource type="Texture2D" uid="uid://cjswiqb2pptbg" path="res://Player/cat3/a.left.walk1.png" id="31_rlmnt"]
[ext_resource type="Texture2D" uid="uid://b0sihsjhnbu5f" path="res://Player/cat3/a.left.walk2.png" id="32_uyv6e"]
[ext_resource type="Texture2D" uid="uid://hivb2erwohe7" path="res://Player/cat3/a.right.png" id="33_6fhdl"]
[ext_resource type="Texture2D" uid="uid://w064dxtc2n2o" path="res://Player/cat3/a.right.walk1.png" id="34_mjfri"]
[ext_resource type="Texture2D" uid="uid://ygtdddp5tsjm" path="res://Player/cat3/a.right.walk2.png" id="35_612dn"]
[ext_resource type="Texture2D" uid="uid://bwdibmpyl730y" path="res://Player/cat3/a.back.png" id="36_2fqxv"]
[ext_resource type="Texture2D" uid="uid://d4bsph57whc22" path="res://Player/cat3/a.back.walk2.png" id="37_ekowe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0v7qb"]
size = Vector2(180, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ylhg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_uc6q1")
}, {
"duration": 1.0,
"texture": ExtResource("9_vygm6")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_2e153")
}, {
"duration": 1.0,
"texture": ExtResource("11_cdkxt")
}, {
"duration": 1.0,
"texture": ExtResource("12_k1sw4")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_6rkns")
}, {
"duration": 1.0,
"texture": ExtResource("14_jbja5")
}, {
"duration": 1.0,
"texture": ExtResource("15_xvovi")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_vjpaa")
}, {
"duration": 1.0,
"texture": ExtResource("17_jyxgm")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_crc4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_e8wx8")
}, {
"duration": 1.0,
"texture": ExtResource("19_tdq2s")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_dygjy")
}, {
"duration": 1.0,
"texture": ExtResource("21_edvcq")
}, {
"duration": 1.0,
"texture": ExtResource("22_xyeuq")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_t4s8j")
}, {
"duration": 1.0,
"texture": ExtResource("24_iluto")
}, {
"duration": 1.0,
"texture": ExtResource("25_av1bx")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_dygid")
}, {
"duration": 1.0,
"texture": ExtResource("27_8d602")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_onvxb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_06tja")
}, {
"duration": 1.0,
"texture": ExtResource("29_ecpwa")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_g4i0f")
}, {
"duration": 1.0,
"texture": ExtResource("31_rlmnt")
}, {
"duration": 1.0,
"texture": ExtResource("32_uyv6e")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_6fhdl")
}, {
"duration": 1.0,
"texture": ExtResource("34_mjfri")
}, {
"duration": 1.0,
"texture": ExtResource("35_612dn")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_2fqxv")
}, {
"duration": 1.0,
"texture": ExtResource("37_ekowe")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5ji8"]
size = Vector2(110, 158)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dnxm"]
size = Vector2(107, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3hs3"]
size = Vector2(155, 218.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8l48"]
size = Vector2(201, 120)

[node name="MainGame" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
position = Vector2(-43, 55)
script = ExtResource("1_3tbxw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(627, 333.75)
scale = Vector2(0.914244, 0.861868)
texture = ExtResource("2_tdq2s")

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(627, 332.5)
scale = Vector2(0.78625, 0.739955)
texture = ExtResource("1_8qpgq")

[node name="Timer" type="Sprite2D" parent="."]
position = Vector2(1146.9999, 76)
scale = Vector2(0.241071, 0.245125)
texture = ExtResource("3_aeu83")

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(1057.741, 75.74398)
scale = Vector2(0.241071, 0.238128)
texture = ExtResource("4_f21le")

[node name="Customer" type="Area2D" parent="."]
script = ExtResource("3_x5ji8")

[node name="Sprite2D" type="Sprite2D" parent="Customer"]
position = Vector2(621, 152)
scale = Vector2(0.223633, 0.186524)
texture = ExtResource("4_v3hs3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Customer"]
position = Vector2(623, 152)
shape = SubResource("RectangleShape2D_0v7qb")

[node name="OrderIcon" type="Sprite2D" parent="Customer"]
position = Vector2(620, 75)
scale = Vector2(0.2, 0.2)

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_pv6b4")

[node name="Cat1" type="AnimatedSprite2D" parent="Player"]
position = Vector2(625, 361)
sprite_frames = SubResource("SpriteFrames_6ylhg")
animation = &"up"

[node name="Cat2" type="AnimatedSprite2D" parent="Player"]
position = Vector2(625, 360)
sprite_frames = SubResource("SpriteFrames_crc4a")
animation = &"up"

[node name="Cat3" type="AnimatedSprite2D" parent="Player"]
position = Vector2(625, 362)
sprite_frames = SubResource("SpriteFrames_onvxb")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(626, 367)
shape = SubResource("RectangleShape2D_x5ji8")

[node name="Stove" type="Area2D" parent="."]
script = ExtResource("5_pv6b4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stove"]
position = Vector2(950, 186)
shape = SubResource("RectangleShape2D_8dnxm")

[node name="DrinkMachine" type="Area2D" parent="."]
position = Vector2(3, -8)
script = ExtResource("6_8dnxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrinkMachine"]
position = Vector2(292.5, 204.75)
shape = SubResource("RectangleShape2D_v3hs3")

[node name="ToppingStation" type="Area2D" parent="."]
position = Vector2(0, 4)
script = ExtResource("7_v3hs3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToppingStation"]
position = Vector2(1073.5, 441)
shape = SubResource("RectangleShape2D_o8l48")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OrderLabel" type="Label" parent="CanvasLayer"]
offset_left = 529.0
offset_top = 19.0
offset_right = 714.0
offset_bottom = 42.0

[node name="CoinsLabel" type="Label" parent="CanvasLayer"]
offset_left = 1025.741
offset_top = 96.74397
offset_right = 1091.741
offset_bottom = 112.74397
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
offset_left = 1114.9999
offset_top = 96.0
offset_right = 1180.9999
offset_bottom = 112.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotbarSlot" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(627, 581)
scale = Vector2(0.157, 0.145)
texture = ExtResource("9_o8l48")

[node name="NewStove" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(865, 183)
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_m6fch")

[node name="DrinkMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 270.0
offset_top = 476.0
offset_right = 865.0
offset_bottom = 578.0

[node name="MenuBackground" type="TextureRect" parent="CanvasLayer/DrinkMenu"]
layout_mode = 0
offset_left = 130.0
offset_top = -27.0
offset_right = 590.0
offset_bottom = 44.0
texture = ExtResource("10_led80")

[node name="CoffeeButton" type="TextureButton" parent="CanvasLayer/DrinkMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165
anchor_top = 0.5
anchor_right = 0.618
anchor_bottom = 1.0
offset_left = 31.825
offset_top = -28.0
offset_right = -13.71
offset_bottom = 20.0
texture_normal = ExtResource("11_mi4js")
stretch_mode = 5

[node name="TeaButton" type="TextureButton" parent="CanvasLayer/DrinkMenu"]
layout_mode = 0
offset_left = 366.0
offset_top = 16.0
offset_right = 590.0
offset_bottom = 131.0
texture_normal = ExtResource("12_o3vwv")
stretch_mode = 5

[node name="ToppingMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ToppingMenuBackground" type="TextureRect" parent="CanvasLayer/ToppingMenu"]
layout_mode = 0
offset_left = 402.0
offset_top = 450.0
offset_right = 860.0
offset_bottom = 522.0
texture = ExtResource("13_mi4js")

[node name="StrawberryButton" type="TextureButton" parent="CanvasLayer/ToppingMenu"]
layout_mode = 0
offset_left = 395.0
offset_top = 527.0
offset_right = 625.0
offset_bottom = 574.0
texture_normal = ExtResource("14_401ut")
stretch_mode = 5

[node name="BlueberryButton" type="TextureButton" parent="CanvasLayer/ToppingMenu"]
layout_mode = 0
offset_left = 638.0
offset_top = 525.0
offset_right = 864.0
offset_bottom = 576.0
texture_normal = ExtResource("15_yphxy")
stretch_mode = 5

[node name="Back" type="Button" parent="CanvasLayer"]
offset_left = 18.0
offset_top = 19.0
offset_right = 326.0
offset_bottom = 117.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("17_yphxy")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("18_ma1re")
volume_db = -20.0

[node name="ClickSound" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("19_28psf")

[node name="InteractiveSound" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("20_a6adi")

[node name="Ding" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("21_va67g")
volume_db = -10.0

[node name="CountDown" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("22_t0yo1")

[node name="Bell" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("23_6brkw")
volume_db = -22.0

[node name="Fire" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("24_cgwad")

[node name="Drink" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("25_0igvr")

[node name="Virtual Joystick" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = 661.0
offset_right = 28.0
offset_bottom = 701.0
script = ExtResource("29_05o7g")
metadata/_custom_type_script = "uid://dtnapf3q64px1"

[connection signal="pressed" from="CanvasLayer/DrinkMenu/CoffeeButton" to="DrinkMachine" method="_on_coffee_button_pressed"]
[connection signal="pressed" from="CanvasLayer/DrinkMenu/TeaButton" to="DrinkMachine" method="_on_tea_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToppingMenu/StrawberryButton" to="ToppingStation" method="_on_strawberry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToppingMenu/BlueberryButton" to="ToppingStation" method="_on_blueberry_button_pressed"]
